force-app/main/default/objects/Employee_Warnings__c.object
<CustomObject>
    <fields>
        <fullName>Copy_Date_Warning__c</fullName>
        <formula>TEXT(DAY(  Date_of_Warning__c  )) + &quot;/&quot; + 
TEXT(MONTH( Date_of_Warning__c  )) + &quot;/&quot; + 
RIGHT(TEXT(YEAR(Date_of_Warning__c  )),4)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy Date Warning</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Warning__c</fullName>
        <label>Date of Warning</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_ID_18_Char__c</fullName>
        <description>The ID of the record in the alternate SFDC org, where applicable.</description>
        <externalId>true</externalId>
        <label>External ID (18 Char)</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Notes_of_Meeting__c</fullName>
        <label>Notes of Meeting</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Person_Issuing_Warning__c</fullName>
        <label>Person Issuing Warning</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position_of_Person_Warning__c</fullName>
        <label>Position of Person Warning</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_Warning__c</fullName>
        <label>Reason for Warning</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <formula>TEXT(Staff_Member__r.Owner.School__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>School</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Staff_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Staff Member</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Employee Warnings</relationshipLabel>
        <relationshipName>Employee_Warnings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Staff_Members_Present__c</fullName>
        <label>Staff Members in Meeting</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Text_in_Letter_Final_Phrase__c</fullName>
        <formula>IF( TEXT(Type_of_Warning__c )=&quot;Verbal&quot;, &quot;You are hereby informed that this document, although confidential, is now part of your employee file. You are also advised that the issuance of two verbal warnings from the school constitutes the equivalent of a written warning.&quot;,&quot;You are hereby informed that this document, although confidential, is now part of your employee file. You are also advised that the issuance of two written warnings from the school constitutes reason for immediate dismissal.&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Text in Letter Final Phrase</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Warning__c</fullName>
        <label>Type of Warning</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Verbal</fullName>
                </value>
                <value>
                    <fullName>Written</fullName>
                </value>
                <value>
                    <fullName>Dismissal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Employee Warning</label>
    <nameField>
        <displayFormat>W-{0000}</displayFormat>
        <label>Employee Warnings Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Warnings</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Verify_Date_of_Warning</fullName>
        <active>true</active>
        <description>Verifies that a date of warning is included</description>
        <errorConditionFormula>TEXT( Date_of_Warning__c ) =&quot;&quot;</errorConditionFormula>
        <errorDisplayField>Date_of_Warning__c</errorDisplayField>
        <errorMessage>Please select a date of warning</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Verify_Reason_for_Warning</fullName>
        <active>true</active>
        <description>Verifies that a reason for warning is included</description>
        <errorConditionFormula>Reason_for_Warning__c =&quot;&quot;</errorConditionFormula>
        <errorDisplayField>Reason_for_Warning__c</errorDisplayField>
        <errorMessage>Please include a reason for warning</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Verify_Staff_Present</fullName>
        <active>true</active>
        <description>Verifies that staff members in meeting is included</description>
        <errorConditionFormula>Staff_Members_Present__c  =&quot;&quot;</errorConditionFormula>
        <errorDisplayField>Staff_Members_Present__c</errorDisplayField>
        <errorMessage>Please indicate who was present in the meeting</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Verify_Type_of_Warning</fullName>
        <active>true</active>
        <description>Verifies that a type of warning is inputed</description>
        <errorConditionFormula>TEXT( Type_of_Warning__c) =&quot;&quot;</errorConditionFormula>
        <errorDisplayField>Type_of_Warning__c</errorDisplayField>
        <errorMessage>Please select a type of warning</errorMessage>
    </validationRules>
</CustomObject>